examples/type_system/failing/194_effect_row_multi_missing_deterministic_e400.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/194_effect_row_multi_missing_deterministic_e400.flx
// error[E400]: Missing Ambient Effect
//
// Call to `call_requires_clock_console` requires effect `Clock` in this function signature.
//
//   examples/type_system/failing/194_effect_row_multi_missing_deterministic_e400.flx:34:5
//    |
// 34 |     call_requires_clock_console(worker)
//    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
//    |     --------------------------- effectful call occurs here
//
// Hint:
//   Add `with Clock` to the enclosing function.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E400

// E400: deterministic first missing effect selection for multi-effect rows.
// Expected: missing `Clock` is reported first (stable ordering: alphabetical).

fn call_requires_clock_console(f: (() -> Int with Console, Clock)) -> Int with Console, Clock {
    f()
}

fn worker() -> Int with Console, Clock {
    print("worker")
    now_ms()
}

fn caller() -> Int {
    call_requires_clock_console(worker)
}

fn main() -> Unit {
    let _ = caller()
}
